--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,6 @@
 </head>
 <body>  
     <h1>Hello! This is a testing page.</h1>
-    <h2>Welcome to my webite..</h2>
+    <h2 style="color: blue;">Welcome to my webite..</h2>
 </body>
 </html>
